src/objects/ContractParticipation__c.object
<CustomObject>
    <description>Junction object that connect multiple contracts to multiple service participations.</description>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Service Participations</relationshipLabel>
        <relationshipName>ContractParticipations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Participation__c</fullName>
        <label>Service Participation</label>
        <referenceTo>ServiceParticipation__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>ContractParticipations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Milestones__c</fullName>
        <formula>Contract__r.Total_Number_of_Templ_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Number of Milestones under this Contract.</inlineHelpText>
        <label>Total Number of Milestones</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contract Participation</label>
    <nameField>
        <displayFormat>CP - {00000}</displayFormat>
        <label>ContractParticipation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ContractParticipations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>